--- a/documento.html
+++ b/documento.html
@@ -15,6 +15,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@400;700&family=Source+Serif+Pro&family=Spectral&family=Teko:wght@400;700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/113f0c6b73.js"crossorigin="anonymous"></script>
 	</head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KZKH2RFFFK"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+      
+        gtag('config', 'G-KZKH2RFFFK');
+      </script>
 	<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
 		<header class="fontteko">
 		<!--Menù di navigazione-->
