--- a/documento.html
+++ b/documento.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html id="documento.html" lang="it-IT">
 	<head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KZKH2RFFFK"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-      
-        gtag('config', 'G-KZKH2RFFFK');
-      </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QL75JG92F6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-QL75JG92F6');
+    </script>
 		<title>Scuta ccà</title>
 		<meta charset="utf-8">
 		<link rel="icon" type="image/x-icon" href="img/favicon3.ico">
