--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="it-IT">
 	<head>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-QL75JG92F6"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-36TXZS43JF"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
     
-      gtag('config', 'G-QL75JG92F6');
+      gtag('config', 'G-36TXZS43JF');
     </script>
 		<title>Scuta ccà</title>
 		<meta charset="utf-8">
