--- a/documento.html
+++ b/documento.html
@@ -2,13 +2,13 @@
 <html id="documento.html" lang="it-IT">
 	<head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QL75JG92F6"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-36TXZS43JF"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
     
-      gtag('config', 'G-QL75JG92F6');
+      gtag('config', 'G-36TXZS43JF');
     </script>
 		<title>Scuta ccà</title>
 		<meta charset="utf-8">
