--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="it-IT">
 	<head>
+		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-36TXZS43JF"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -67,20 +68,20 @@
       	     <div class="item">
       	      <img src="img/marsala1.jpg" alt="Saline di Marsala">
       	      <div class="carousel-caption">
-      	        <h2>L'unico festival musicale che unisce la Sicilia</h2>
+      	        <h2>Un'esperienza coinvolgente e totalmente gratuita</h2>
       	      </div>
       	     </div>
       	
       	     <div class="item">
       	      <img src="img/duomosiracusa.jpg" alt="Siracusa">
       	      <div class="carousel-caption">
-      	        <h2>L'unico festival musicale che unisce la Sicilia</h2>
+      	        <h2>Artisti della tradizione e nuove promesse locali</h2>
       	      </div>
       	     </div>
       	     <div class="item">
       	      <img src="img/duomopalermo.jpg" alt="Duomo di Palermo">
       	      <div class="carousel-caption">
-      	        <h2>L'unico festival musicale che unisce la Sicilia</h2>
+      	        <h2>Vota la tua provincia e avvicina il festival</h2>
       	      </div>
       	     </div>
       	  </div>
@@ -99,7 +100,7 @@
 		<div class="container text-center">
 			<h3 id="ilfestival" class='fontteko'>Ascutamu stu festival!</h3>
 			<p><em>Il festival musicale più amato dai siciliani.</em></p><hr>
-			<p>Torna lo Scuta ccà festival, il festival più amato dai siciliani!<br> Dopo la lunga pausa pandemica ritorna l'unico festival in grado di coinvolgere tutta la Sicilia grazia al suo animo itinerante.<br>Candida la tua provincia inviandocela tramite il form sottostante e ricordati che il festival è totalmente gratuito!<br>Le prime quattro province che risulteranno candidate da più di voi ospiteranno la nuova versione dello Scuta ccà festival!</p>
+			<p>Torna lo Scuta ccà festival, il festival più amato dai siciliani!<br> Dopo la lunga pausa pandemica ritorna l'unico festival in grado di coinvolgere tutta la Sicilia grazie al suo animo itinerante.<br>Candida la tua provincia inviandocela tramite il form sottostante e ricordati che il festival è totalmente gratuito!<br>Le prime quattro province che risulteranno candidate da più di voi ospiteranno la nuova versione dello Scuta ccà festival!</p>
 			<h3>Artisti presenti a edizioni precedenti</h3>
 			<div class="row">
     		    <div class="col-sm-4">
@@ -198,7 +199,7 @@
           <a class="up-arrow" href="#myPage" data-toggle="tooltip"title="Inizio pagina">
             <span class="glyphicon glyphicon-chevron-up"></span>
          </a><br><br>
-         <p><a href="https://www.youtube.com/watch?v=wE6a-cT6oss&ab_channel=RamblersVEVO" target="_blank"><img id="stemma" src="img/stemma.jpg"></a>Copyright © 2023 Presti Andrea. Tutti i diritti sono riservati. <a href="documento.html" data-toggle="tooltip"><i class="fa-regular fa-file-lines"></i></a></p>
+         <p><a href="https://www.youtube.com/watch?v=wE6a-cT6oss&ab_channel=RamblersVEVO" target="_blank"><img id="stemma" src="img/stemma.jpg"></a>Copyright © 2023 Presti Andrea. Tutti i diritti sono riservati. <a href="documento.html" data-toggle="tooltip"><i class="fa-regular fa-file-lines"></i></a><br>Il sito sponsorizza un evento fittizio</p>
          <p><a target="_blank" href="https://www.instagram.com/scuta_cca_fest_official/"><i class="fa-brands fa-instagram"></a></i><a target="_blank" href="https://www.facebook.com/Scuta-cc%C3%A0-fest-113252231774832"><i class="fa-brands fa-facebook"></i></a></p>
         </footer>
         <script>
